Fix extra lines in integrated console output window.

BUG: 466961